# VISxGenAI-2025

./: .env.example  DEVELOPMENT.md  README.md  biome.json  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: deploy.yml
docs/: index.md  paper.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css  index.ts  utils.ts
docs/.vitepress/theme/components/: GalleryCard.vue  GalleryGrid.vue  Link.vue  ReportIframe.vue  ReportLink.vue
docs/gallery/: barley.md  cars.md  cars93.md  diamonds.md  driving.md  index.md  iris.md  mammal-sleep.md  vispub-flawed-insight.md  vispub-minimalistic.md  vispub-multifaceted.md  vispub-submission.md
docs/principles/: composability-and-modularity.md  explainability-and-trust.md  granularity-and-agency.md  index.md  interactive-exploration.md
docs/public/reports/barley/: index.html
docs/public/reports/cars/: index.html
docs/public/reports/cars93/: index.html
docs/public/reports/diamonds/: index.html
docs/public/reports/driving/: index.html
docs/public/reports/iris/: index.html
docs/public/reports/mammal-sleep/: index.html
docs/public/reports/vispub-flawed-insight/: index.html
docs/public/reports/vispub-minimalistic/: index.html
docs/public/reports/vispub-multifaceted/: index.html
src/visxgenai/: main.py
src/visxgenai/core/: __init__.py  _instrumentor.py  data.py  env.py  lm.py  session.py  store.py  types.py  utils.py
src/visxgenai/notebook_kit/: __init__.py  builder.py  renderer.py
src/visxgenai/provenance/: __init__.py  notebook-template.py
workbench/: agents.py  e2e.py
(+183 files in other folders)
